--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -3,6 +3,6 @@ title: About
 slug: "/about"
 ---
 
-Hi!
+Hola!
 
-I'm LekoArts, a designer turned software engineer passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+I'm Martin Nepita, a backend developer engineer passionate about open source & teaching. 
