fixed gatsby config +  urls

--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
@@ -1,4 +1,4 @@
 <Title text="Projects" />
 
-- [3D Art with Cinema4D](https://www.lekoarts.de/art/3d?utm_source=minimal-blog&utm_medium=Theme)
-- [Landscape Photography](https://www.lekoarts.de/art/photography?utm_source=minimal-blog&utm_medium=Theme)
+- [Gatsby Blog](https://www.mnepita.dev/blog?utm_source=my-blog&utm_medium=blog)
+- [Landscape Photography](https://www.foto.mnepita.dev)
